docs/reports/uebungen2.log
Traceback (most recent call last):
  File "/home/natalie/.local/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/natalie/.local/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/natalie/.local/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/natalie/.local/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/natalie/.local/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/natalie/.local/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/natalie/.local/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
if 3 < 5  64 > 66:
    print('Griechischer Wein ist so wie das Blut der Erde')
if len('') == 1:
    print('Komm, schenk dir ein')
if 'Hallo' 'False':
    print('Ich bau ein Schloss')
if True False:
    print('Und wenn ich dann traurig werde')
if 97 == 22:
    print('Liegt es daran, dass ich immer träume von daheim')
if 0 1 2:
    print('Morgen Kinder wirds nix geben.')
if False True False True:
    print('Du musst verzeihn.')


------------------

[0;36m  Input [0;32mIn [5][0;36m[0m
[0;31m    if 3 < 5  64 > 66:[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1448293256.py, line 1)

